vessels/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: calibre
          image: linuxserver/calibre-web:latest
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          volumeMounts:
            - name: calibre-config
              mountPath: /config
            - name: calibre-books
              mountPath: /books
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
      volumes:
        - name: calibre-config
          persistentVolumeClaim:
            claimName: calibre-config
        - name: calibre-books
          persistentVolumeClaim:
            claimName: calibre-books
