vessels/calibre/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`books.super.fish`)
      kind: Rule
      priority: 10
      middlewares:
        - name: forward-auth
      services:
        - kind: Service
          name: calibre
          port: http
          scheme: http
    - match: Host(`books.super.fish`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - kind: Service
          name: authentik
          namespace: authentik
          port: 80
          scheme: http
  tls:
    secretName: books.super.fish

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
spec:
  forwardAuth:
    address: https://auth.super.fish/outpost.goauthentik.io/auth/traefik
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
    trustForwardHeader: true
